kubernetes-study/service/delivery.yaml
--- #namespace
apiVersion: v1
kind: Namespace
metadata:
  name: other-snackbar
--- #service 
apiVersion: v1
kind: Service
metadata:
  name: delivery
  namespace: other-snackbar
  labels:
    service: delivery
    project: snackbar_project
spec:
  type: ClusterIP
  selector:
    service: delivery
    project: snackbar_project
  ports:
    - port: 80
      targetPort: 8080
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: other-snackbar
  labels:
    service: delivery
    project: snackbar_project
spec:
  replicas: 3
  selector:
    matchLabels:
      service: delivery
      project: snackbar_project
  template:
    metadata:
      labels:
        service: delivery
        project: snackbar_project
    spec:
      containers:
        - name: delivery
          image: yoonjeong/delivery:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
