kubernetes-study/service/nodeport.yaml
---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: snackbar
---
# 주문 service
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: snackbar
  labels:
    service: order
    project: snackbar_project
spec:
  type: NodePort
  selector:
    service: order
    project: snackbar_project
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
---
# payment service
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: snackbar
  labels:
    service: payment
    project: snackbar_project
spec:
  type: ClusterIP
  selector:
    service: payment
    project: snackbar_project
  ports:
    - port: 80
      targetPort: 8080
---
# order deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: snackbar
  labels:
    service: order
    project: snackbar_project
spec:
  replicas: 3
  selector:
    matchLabels:
      service: order
      project: snackbar_project
  template:
    metadata:
      labels:
        service: order
        project: snackbar_project
    spec:
      containers:
        - name: order
          image: yoonjeong/order:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
# payment deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: snackbar
  labels:
    service: payment
    project: snackbar_project
spec:
  replicas: 3
  selector:
    matchLabels:
      service: payment
      project: snackbar_project
  template:
    metadata:
      labels:
        service: payment
        project: snackbar_project
    spec:
      containers:
        - name: payment
          image: yoonjeong/payment:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
